--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:dev": "tsx --env-file=.env src/server.ts",
     "start:watch": "tsx watch --env-file=.env src/server.ts",
     "dist": "tsup src",
-    "start:dist": "npm run dist && --env-file=.env node/server.js"
+    "start:dist": "npm run dist && node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +20,8 @@
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.4"
   }
 }
